<resources xmlns:xliff="http://schemas.android.com/apk/res/res-auto">
    <string name="app_name">Sunshine</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh" translatable="false">Refresh</string>
    <string name="action_viewmap">ViewMap</string>

    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_settings">Settings</string>

    <string name="pref_location_key" translatable="false">Location</string>
    <string name="pref_location_label">Location</string>
    <string name="pref_location_default" translatable="false">94043</string>

    <string name="pref_temperature_unit_key" translatable="false">temperatureunit</string>
    <string name="pref_temperature_unit_title">Temperature Units</string>
    <string name="pref_temperature_unit_default">Metric</string>
    <string name="pref_temperature_unit_label_metric">Metric</string>
    <string name="pref_temperature_unit_label_imperial">Imperial</string>
    <string name="pref_temperature_unit_metric">Metric</string>
    <string name="pref_temperature_unit_imperial">Imperial</string>

    <string name="share_title">Share</string>

    <string name = "content_authorities">com.example.bighead.sunshine.app</string>

    <string name="today">Today</string>

    <string name="tomorrow">Tomorrow</string>

    <!--
    "Xliff" is used to Mark message parts that should not be translated,
        because it may a piece of code.
    As you prepare you strings for translation,
    look for and mark text that should remain as-is, without translation, so that translators don’t change it.
    -->
    <string name="format_full_friendly_date"><xliff:g id="month">%1$s</xliff:g>, <xliff:g id="day">%2$s</xliff:g></string>
    <string name="format_temperature"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>

    <!-- Windspeed formats -->
    <!-- Wind in mph [CHAR LIMIT=25] -->
    <string name="format_wind_mph">
        Wind: <xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g>
    </string>

    <!-- Wind in kph [CHAR LIMIT=25] -->
    <string name="format_wind_kmh">
        Wind: <xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g>
    </string>

    <!-- Pressure format CHAR LIMIT=25] -->
    <string name="format_pressure">Pressure: <xliff:g id="pressure">%1.0f</xliff:g> hPa</string>

    <!-- Humidity format CHAR LIMIT=25]-->
    <string name="format_humidity">Humidity: <xliff:g id="humidity">%1.0f</xliff:g> %%</string>

</resources>
