<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditTextPreference android:key="@string/pref_location_key"
        android:title="@string/pref_location_label"
        android:defaultValue="@string/pref_location_default"
        android:inputType="text"
        android:singleLine="true"/>

    <ListPreference android:key="@string/pref_temperature_unit_key"
        android:title="@string/pref_temperature_unit_title"
        android:dialogTitle="@string/pref_temperature_unit_title"
        android:defaultValue="@string/pref_temperature_unit_default"
        android:entries="@array/pref_temperature_unit_array_entry_title"
        android:entryValues="@array/pref_temperature_unit_array_entry_value" />

</PreferenceScreen>